--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="row pt-5">
           <div class="col-lg-6">
-            <img class="profile" src="../Portofolio/12f1cb5b-3fbe-46fc-be71-3815456b7aa6.jfif" alt="">
+            <img class="profile" src="12f1cb5b-3fbe-46fc-be71-3815456b7aa6.jfif" alt="">
           </div>
           <div class="col-lg-6 pt=3">
             <ul class="mt-3">
@@ -162,7 +162,7 @@
       <div class="row mt-5">
         <div class="col-lg-4">
           <div class="card">
-            <img class="mt-5 ms-3 mb-3" src="../Portofolio/img/s-1.svg" alt="" width="80"/>
+            <img class="mt-5 ms-3 mb-3" src="img/s-1.svg" alt="" width="80"/>
             <div class="card-body">
               <h3 class="text-white mb-5 fw-bold">ul/ux design</h3>
               <a href="" class="text-decoration-none text-white">download now</a>
@@ -172,7 +172,7 @@
         
         <div class="col-lg-4">
           <div class="card">
-            <img class="mt-5 ms-3 mb-3" src="../Portofolio/img/s-2.svg" alt="" width="80"/>
+            <img class="mt-5 ms-3 mb-3" src="img/s-2.svg" alt="" width="80"/>
             <div class="card-body">
               <h3 class="text-white mb-5 fw-bold">branding design</h3>
               <a href="" class="text-decoration-none text-white">download now</a>
@@ -181,7 +181,7 @@
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img class="mt-5 ms-3 mb-3" src="../Portofolio/img/s-3.svg" alt="" width="80"/>
+            <img class="mt-5 ms-3 mb-3" src="img/s-3.svg" alt="" width="80"/>
             <div class="card-body">
               <h3 class="text-white mb-5 fw-bold">web development</h3>
               <a href="" class="text-decoration-none text-white">download now</a>
@@ -196,7 +196,7 @@
             <div class="row">
               <div class="col-lg-4">
                 <div class="card">
-                  <img src="../Portofolio/img/port-1.jpg" alt="" class="card-image-top"/>
+                  <img src="img/port-1.jpg" alt="" class="card-image-top"/>
                   <a href="" class="text-end">
                     ><i class="bi bi-ghitub fs-1 blue me-3"></i>
                   </a>
@@ -207,7 +207,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img src="../Portofolio/img/port-2.jpg" alt="" class="card-image-top"/>
+                  <img src="img/port-2.jpg" alt="" class="card-image-top"/>
                   <a href="" class="text-end">
                     ><i class="bi bi-ghitub fs-1 blue me-3"></i>
                   </a>
@@ -218,7 +218,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img src="../Portofolio/img/port-3.jpg" alt="" class="card-image-top"/>
+                  <img src="img/port-3.jpg" alt="" class="card-image-top"/>
                   <a href="" class="text-end">
                     ><i class="bi bi-ghitub fs-1 blue me-3"></i>
                   </a>
@@ -229,7 +229,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img src="../Portofolio/img/port-4.jpg" alt="" class="card-image-top"/>
+                  <img src="img/port-4.jpg" alt="" class="card-image-top"/>
                   <a href="" class="text-end">
                     ><i class="bi bi-ghitub fs-1 blue me-3"></i>
                   </a>
@@ -240,7 +240,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img src="../Portofolio/img/port-5.jpg" alt="" class="card-image-top"/>
+                  <img src="img/port-5.jpg" alt="" class="card-image-top"/>
                   <a href="" class="text-end">
                     ><i class="bi bi-ghitub fs-1 blue me-3"></i>
                   </a>
@@ -251,7 +251,7 @@
               </div>
               <div class="col-lg-4">
                 <div class="card">
-                  <img src="../Portofolio/img/port-6.jpg" alt="" class="card-image-top"/>
+                  <img src="img/port-6.jpg" alt="" class="card-image-top"/>
                   <a href="" class="text-end">
                     ><i class="bi bi-ghitub fs-1 blue me-3"></i>
                   </a>
